--- a/app/views/templates/admin/home.html
+++ b/app/views/templates/admin/home.html
@@ -1,60 +1,56 @@
 <!DOCTYPE html>
 <html lang="en" class="h-100">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="{{ url_for('static', filename='img/favicon.ico') }}" type="image/x-icon">
-    <title>Home</title>
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
-      integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
-      crossorigin="anonymous"
-    ></script>
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" href="{{ url_for('static', filename='img/favicon.ico') }}" type="image/x-icon">
+  <title>Home</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+</head>
 
 <style>
-/*
- * Globals
- */
-
- .fondo {
+  /*
+     * Globals
+     */
+  .fondo {
     background-color: rgba(47, 210, 255, 0.479);
   }
   
+  .custom-text-color {
+    color: #ffffff;
+  }
+
+  .btn:hover {
+    background-color: #f5f6f7 !important;
+  }
+  
+  .color-boton {
+    background-color: #fecc4c;
+    border-color: #f1a02a;
+    color: #0a0a23;
+  }
+
   /* Custom default button */
   .btn-light,
   .btn-light:hover,
   .btn-light:focus {
     color: rgb(0, 0, 0);
-    text-shadow: none; /* Prevent inheritance from `body` */
+    text-shadow: none;
+    /* Prevent inheritance from `body` */
   }
 
-  
   .cover-container {
     max-width: 42em;
   }
-  
+
   /*
-       * Header
-       */
-  
+           * Header
+           */
   .nav-masthead .nav-link {
     color: rgb(255, 255, 255);
     font-size: large;
@@ -62,25 +58,25 @@
       "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
     border-bottom: 0.5rem transparent solid;
   }
-  
+
   .nav-masthead .nav-link:hover,
   .nav-masthead .nav-link:focus {
     border-bottom-color: rgba(255, 255, 255, 0.25);
     color: rgba(255, 255, 255, 0.652);
   }
-  
-  .nav-masthead .nav-link + .nav-link {
+
+  .nav-masthead .nav-link+.nav-link {
     margin-left: 1rem;
   }
-  
+
   .nav-masthead .custom-color {
-    color: black;
+    color: white;
   }
-  
+
   #links {
     color: rgb(70, 70, 217);
   }
-  
+
   .bd-placeholder-img {
     font-size: 1.125rem;
     text-anchor: middle;
@@ -88,13 +84,13 @@
     -moz-user-select: none;
     user-select: none;
   }
-  
+
   @media (min-width: 768px) {
     .bd-placeholder-img-lg {
       font-size: 3.5rem;
     }
   }
-  
+
   .b-example-divider {
     height: 3rem;
     background-color: rgba(0, 0, 0, 0.1);
@@ -103,25 +99,24 @@
     box-shadow: inset 0 0.5em 1.5em rgba(0, 0, 0, 0.1),
       inset 0 0.125em 0.5em rgba(0, 0, 0, 0.15);
   }
-  
+
   .b-example-vr {
     flex-shrink: 0;
     width: 1.5rem;
     height: 100vh;
   }
-  
+
   .bi {
     vertical-align: -0.125em;
     fill: currentColor;
   }
-  
+
   .nav-scroller {
     position: relative;
     z-index: 2;
     height: 2.75rem;
-    overflow-y: hidden;
   }
-  
+
   .nav-scroller .nav {
     display: flex;
     flex-wrap: nowrap;
@@ -134,51 +129,33 @@
   }
 </style>
 
-  <body class="d-flex h-100 text-center fondo">
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-      <header class="mb-auto">
-        <div>
-          <h3 class="float-md-start mb-0">Librería Virtual</h3>
-          <nav class="nav nav-masthead justify-content-center float-md-end">
-            <a class="nav-link fw-bold py-1 px-0 custom-color" href="/admin"
-              >Home</a
-            >
-            <a
-              class="nav-link fw-bold py-1 px-0 custom-color"
-              href="/library"
-              >Library</a
-            >
-            <a
-              class="nav-link fw-bold py-1 px-0 custom-color"
-              href="/admin/dashboard"
-              >Dashboard</a
-            >
-            <a
-              class="nav-link fw-bold py-1 px-0 custom-color"
-              href="/logout"
-              >Log Out</a
-            >
-          </nav>
-        </div>
-      </header>
+<body class="d-flex h-100 text-center fondo" style="background-color: #3b3b4f">
+  <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    <header class="mb-auto">
+      <div>
+        <h3 class="float-md-start mb-0 custom-text-color">Virtual Library</h3>
+        <nav class="nav nav-masthead justify-content-center float-md-end">
+          <a class="nav-link fw-bold py-1 px-0 custom-color" href="/admin">Home</a>
+          <a class="nav-link fw-bold py-1 px-0 custom-color" href="/admin/dashboard">Dashboard</a>
+          <a class="nav-link fw-bold py-1 px-0 custom-color" href="/login">Login</a>
+        </nav>
+      </div>
+    </header>
 
-      <main class="px-3">
-        <h1>{{ session['user'] }}</h1>
-        <p class="lead">
-          Cover is a one-page template for building simple and beautiful home
-          pages. Download, edit the text, and add your own fullscreen background
-          photo to make it your own.
-        </p>
-        <p class="lead">
-          <a href="/admin/dashboard" class="btn btn-lg btn-light fw-bold border-white bg-white"
-            >Empezar a gestionar</a
-          >
-        </p>
-      </main>
+    <main class="px-3">
+      <h1 class="text-white">Bienvenido de nuevo { session['user'] }!</h1>
+      <p class="lead r text-white">
+        En esta página podrás administrar el contenido de la página web, añadiendo y eliminando libros que sus alumnos podrán ver luego. ¡Que lo disfrutes!
+      </p>
+      <p class="lead">
+        <a href="/admin/dashboard" class="btn btn-lg fw-bold color-boton">Administrar</a>
+      </p>
+    </main>
 
-      <footer class="mt-auto text-white-50">
-        <p><a href="" class="text-black">AJT'S DEV ↗</a></p>
-      </footer>
-    </div>
-  </body>
+    <footer class="mt-auto text-white-50">
+      <p><a href="" class="text-white">AJT'S DEV ↗</a></p>
+    </footer>
+  </div>
+</body>
+
 </html>
