--- a/app/views/templates/admin/library.html
+++ b/app/views/templates/admin/library.html
@@ -1,167 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="{{ url_for('static', filename='img/favicon.ico') }}" type="image/x-icon">
-    <title>Library</title>
 
-    <!-- Bootstrap CSS v5.2.1 -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
-      crossorigin="anonymous"
-    />
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" href="{{ url_for('static', filename='img/favicon.ico') }}" type="image/x-icon">
+  <title>Library</title>
 
-    <!-- Bootstrap icons v5.2.1 -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
-    />
-  </head>
+  <!-- Bootstrap CSS v5.2.1 -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous" />
 
-  <style>
-    .fondo {
-      background-color: #f4f4f4;
-    }
-    .btn-a {
-      width: 25%;
-      background-color: green;
-    }
+  <!-- Bootstrap icons v5.2.1 -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" />
+</head>
 
-    .rounded-top-image {
-      border-top-left-radius: 0.35rem;
-      border-top-right-radius: 0.35rem;
-    }
-  </style>
+<style>
+  .fondo {
+    background-color: #3b3b4f;
+  }
 
-  <body class="fondo">
-    <header>
-      <!-- Navbar -->
-      <nav
-        class="navbar navbar-expand-lg navbar-white bg-white fixed-top"
-        aria-label="Fourth navbar example"
-        id="navbar"
-      >
-        <div class="container-fluid">
-          <a class="navbar-brand" href="/">
-            <img
-              src="{{ url_for('static', filename='img/logo.png') }}"
-              alt="Logo de la página web"
-              width="40"
-              height="40"
-            />
-          </a>
-          <a class="navbar-brand" href="/admin">Home</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarsExample04"
-            aria-controls="navbarsExample04"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
+  .custom-text-color {
+    color: #d0d0d5;
+  }
 
-          <div class="collapse navbar-collapse" id="navbarsExample04">
-            <ul class="navbar-nav me-auto mb-2 mb-md-0">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/admin"
-                  >Inicio</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/admin/dashboard">Dashboard</a>
-              </li>
-            </ul>
-            <a class="btn btn-outline-primary" href="/logout" role="button"
-              >Logout</a
-            >
-          </div>
-        </div>
-      </nav>
-    </header>
-    <main>
-      <br />
-      <br />
-      <br />
-      {% if data == [] %}
+  .color-boton {
+    background-color: #fecc4c;
+    border-color: #f1a02a;
+    color: #0a0a23;
+  }
+
+  .btn {
+    width: 25%;
+    background-color: #fecc4c;
+  }
+
+  .btn:hover {
+    background-color: #f5f6f7 !important;
+  }
+
+  .rounded-top-image {
+    border-top-left-radius: 0.35rem;
+    border-top-right-radius: 0.35rem;
+  }
+</style>
+
+<body class="fondo">
+  <header>
+    <!-- Navbar -->
+    <nav
+      class="navbar navbar-expand-lg navbar-dark" style="background-color: #0a0a23;" aria-label="Fourth navbar example"
+    >
       <div class="container-fluid">
-        <div
-          class="alert alert-danger alert-dismissible fade show"
-          role="alert"
+        <a class="navbar-brand" href="#">
+          <img
+            src="{{ url_for('static', filename='img/logo.png') }}"
+            alt="Logo de la página web"
+            width="40"
+            height="40"
+          />
+        </a>
+        <a class="navbar-brand" href="/admin">Virtual Library</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarsExample04"
+          aria-controls="navbarsExample04"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
         >
-          <button
-            type="button"
-            class="btn-close"
-            data-bs-dismiss="alert"
-            aria-label="Close"
-          ></button>
-          <strong>No se ha cargado ningún libro todavía</strong>
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarsExample04">
+          <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="/admin"
+                >Inicio</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/admin/admin_library">Library</a>
+            </li>
+          </ul>
+          <a class="btn btn-custom-color" href="/logout" role="button"
+            >Log Out</a
+          >
         </div>
       </div>
+    </nav>
+  </header>
 
-      <script>
-        var alertList = document.querySelectorAll(".alert");
-        alertList.forEach(function (alert) {
-          new bootstrap.Alert(alert);
-        });
-      </script>
+  <main>
+    <br />
+    <br />
+    <br />
+    {% if data == [] %}
+    <div class="container-fluid">
+      <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        <strong>No se ha cargado ningún libro todavía</strong>
+      </div>
+    </div>
 
-      {% endif %}
-      <div class="album py-5">
-        <div class="container">
-          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-            {% for book in data %}
-            <div class="col">
-              <div class="card shadow-sm">
-                <img
-                  src="/resources/covers/{{ book[2] }}"
-                  width="100%"
-                  height="225"
-                  class="rounded-top-image"
-                  loading="lazy"
-                />
-                <div class="card-body">
-                  <h2 class="card-text">{{ book[0] }}</h2>
-                  <div
-                    class="d-flex justify-content-between align-items-center"
-                  >
-                    <div class="btn-group">
-                      <a
-                        href="/resources/download_book/{{book[1]}}"
-                        download="{{ book[1] }}"
-                        class="btn btn-primary"
-                        >Descargar <i class="bi bi-download"></i
-                      ></a>
-                    </div>
+    <script>
+      var alertList = document.querySelectorAll(".alert");
+      alertList.forEach(function(alert) {
+        new bootstrap.Alert(alert);
+      });
+    </script>
+
+    {% endif %}
+    <div class="album py-5">
+      <div class="container">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+          {% for book in data %}
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="/resources/covers/{{ book[2] }}" width="100%" height="225" class="rounded-top-image" loading="lazy" />
+              <div class="card-body" style="background-color: #0a0a23;">
+                <h2 class="card-text text-white">{{ book[0] }}</h2>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="/resources/download_book/{{book[1]}}" download="{{ book[1] }}" class="btn color-boton">Descargar <i class="bi bi-download"></i></a>
                   </div>
                 </div>
               </div>
             </div>
-            {% endfor %}
           </div>
+          {% endfor %}
         </div>
       </div>
-    </main>
-    <footer>
-      <!-- place footer here -->
-    </footer>
-    <!-- Bootstrap JavaScript Libraries -->
-    <!-- Bootstrap JavaScript Libraries -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-      crossorigin="anonymous"
-    ></script>
+    </div>
+  </main>
+  <footer>
+    <!-- place footer here -->
+  </footer>
+  <!-- Bootstrap JavaScript Libraries -->
+  <!-- Bootstrap JavaScript Libraries -->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
-      integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
+</body>
+
 </html>
