--- a/app/views/templates/students/home.html
+++ b/app/views/templates/students/home.html
@@ -31,6 +31,11 @@
     color: #0a0a23;
   }
 
+  .btn:hover {
+    background-color: #f5f6f7 !important;
+  }
+
+
   /* Custom default button */
   .btn-light,
   .btn-light:hover,
