--- a/app/views/templates/students/library.html
+++ b/app/views/templates/students/library.html
@@ -86,8 +86,6 @@
   </header>
   <main>
     <br />
-    <br />
-    <br />
     {% if data == [] %}
     <div class="container-fluid">
       <div class="alert alert-danger alert-dismissible fade show" role="alert">
@@ -110,7 +108,7 @@
           {% for book in data %}
           <div class="col">
             <div class="card shadow-sm" style="background-color: #0a0a23;">
-              <img src="/resources/covers/{{ book[2] }}" width="100%" height="225" class="rounded-top-image"
+              <img src="/resources/covers/{{ book[2] }}" class="card-img-top rounded-top-image" alt="Portada del libro"
                 loading="lazy" />
               <div class="card-body">
                 <h2 class="card-text text-white">{{ book[0] }}</h2>
@@ -127,6 +125,7 @@
         </div>
       </div>
     </div>
+    
   </main>
   <footer>
     <!-- place footer here -->
